--- a/k8s/dailyclean.yml
+++ b/k8s/dailyclean.yml
@@ -62,7 +62,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: dailyclean
-  namespace: gthomas59800-dev
+  namespace: agachemathis
 rules:
   - verbs:
       - get
@@ -103,17 +103,17 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: dailyclean
-  namespace: gthomas59800-dev
+  namespace: agachemathis
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: dailyclean
-  namespace: gthomas59800-dev
+  namespace: agachemathis
 subjects:
   - kind: ServiceAccount
     name: dailyclean
-    namespace: gthomas59800-dev
+    namespace: agachemathis
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
